# readmint

./: .gitignore  .pre-commit-hooks.yaml  Dockerfile  README.md  action.yml  deploy.ps1  deploy.sh  harness-pipeline.yaml
.github/: copilot-instructions.md
backend/: .env.example  pip.conf  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  cortex_client.py  main.py  observability.py  pipeline.py  prompts.py  schemas.py
backend/app/auth/: rbac.py
backend/app/core/: badges.py  drift.py  inventory.py  links.py  scoring.py  secrets_scan.py  style.py  summary.py  templates.py  terminology.py  toc.py  version_sync.py
backend/app/routers/: batch.py  export.py  github.py  refine.py  score.py  style.py  webhooks.py
backend/app/services/: batch.py  cache.py  export.py  github.py  history.py
backend/migrations/: README.md
backend/templates/: browser-extension.yaml  cli-tool.yaml  code-of-conduct.yaml  contributing.yaml  docker-image.yaml  github-action.yaml  helm-chart.yaml  library.yaml  ml-project.yaml  mobile-app.yaml  monorepo.yaml  npm-package.yaml  python-package.yaml  rest-api.yaml  security.yaml  service.yaml  terraform-module.yaml  vscode-extension.yaml  web-app.yaml
backend/tests/: conftest.py  test_api.py  test_badges.py  test_cortex_client.py  test_drift.py  test_github.py  test_history.py  test_inventory.py  test_links.py  test_local_llm.py  test_pipeline.py  test_rbac.py  test_scoring.py  test_secrets_scan.py  test_style.py  test_templates.py  test_terminology.py  test_toc.py  test_version_sync.py  test_webhooks.py
(+48 files in other folders)
